--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Recorder</title>
 </head>
 <body>
   <button id="start">
@@ -23,7 +23,6 @@
 <script type="module">
   import {init} from './index.js';
   init();
-
 </script>
 
 </html>
