--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="google-site-verification" content="-EueFng1Fn8wkVD5QjmhjsrtJ6l17eRm50JDpM41sig" />
         <title>Recorder</title>
         <script src="https://cdn.tailwindcss.com"></script>
         <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
