--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
         <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
     </head>
 
-    <body class="h-full w-full">
-        <div class="bg-[color:var(--colorBg)] min-h-full w-full flex flex-col">
+    <body class="h-full w-full bg-red flex flex-col bg-[color:var(--colorBg)] ">
+        <div class="w-full flex flex-col flex-1">
             <div
-                class="flex justify-between p-8 border-b border-gray-200 shadow-lg"
+                class="flex justify-between p-4 border-b border-gray-200 shadow-md"
             >
                 <div class="flex gap-4">
                     <img src="./logo.png" alt="logo" class="w-9 h-9" />
@@ -124,7 +124,7 @@
 
                 <div class="md:flex gap-6 md:mt-32 md:bg-amber-100 rounded-xl md:p-8">
                     <div>
-                        <h2 class="text-2xl font-bold text-gray-800 mb-2">
+                        <h2 class="text-2xl font-bold text-amber-800 mb-2">
                             Local only
                         </h2>
                         <p class="text-gray-500 text-sm mb-4">
@@ -134,7 +134,7 @@
                     </div>
 
                     <div>
-                        <h2 class="text-2xl font-bold text-gray-800 mb-2">
+                        <h2 class="text-2xl font-bold text-amber-800 mb-2">
                             Open source
                         </h2>
                         <p class="text-gray-500 text-sm mb-4">
@@ -149,7 +149,7 @@
                     </div>
 
                     <div>
-                        <h2 class="text-2xl font-bold text-gray-800 mb-2">
+                        <h2 class="text-2xl font-bold text-amber-800 mb-2">
                             Web tech
                         </h2>
                         <p class="text-gray-500 text-sm mb-4">
@@ -162,7 +162,7 @@
         </div>
 
         <div
-            class="mt-10 text-xs p-3 bg-amber-100 text-center absolute bottom-0 w-full"
+            class="mt-10 text-xs p-3 bg-amber-100 text-center w-full"
         >
             Created by
             <a class="text-amber-700" href="http://adrianf.com">
