Updated title and description

--- a/index.html
+++ b/index.html
@@ -8,7 +8,18 @@
             name="google-site-verification"
             content="-EueFng1Fn8wkVD5QjmhjsrtJ6l17eRm50JDpM41sig"
         />
-        <title>Recorder</title>
+        <title>Web screen recorder</title>
+        <meta
+            name="description"
+            content="Record your screen and download the video"
+        />
+
+        <meta property="og:title" content="Web screen recorder" />
+        <meta
+            property="og:description"
+            content="Record your screen and download the video"
+        />
+
         <style>
             :root {
                 --colorBg: #fffdef;
