--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
             name="google-site-verification"
             content="-EueFng1Fn8wkVD5QjmhjsrtJ6l17eRm50JDpM41sig"
         />
-        <title>Web screen recorder</title>
+        <title>
+            Web Screen Recorder - Record your screen using just your browser
+        </title>
         <meta
             name="description"
             content="Record your screen and download the video"
