--- a/index.html
+++ b/index.html
@@ -152,12 +152,13 @@
                         </h2>
                         <p class="text-gray-500 text-sm mb-4">
                             You can view the source of this web app, clone it
-                            and make it yours
+                            and make it yours. Github link 
                             <a
                                 href="https://github.com/adrianflorinflorescu/html-screen-rec"
                             >
-                                Github link here
+                                here
                             </a>
+                            .
                         </p>
                     </div>
 
@@ -167,7 +168,7 @@
                         </h2>
                         <p class="text-gray-500 text-sm mb-4">
                             Powered by HTML and JS using Media Capture and
-                            Streams API
+                            Streams API.
                         </p>
                     </div>
                 </div>
