--- a/index.html
+++ b/index.html
@@ -152,13 +152,7 @@
                         </h2>
                         <p class="text-gray-500 text-sm mb-4">
                             You can view the source of this web app, clone it
-                            and make it yours. Github link 
-                            <a
-                                href="https://github.com/adrianflorinflorescu/html-screen-rec"
-                            >
-                                here
-                            </a>
-                            .
+                            and make it yours. Github link <a class="text-blue-500" href="https://github.com/adrianflorinflorescu/html-screen-rec">here</a>.
                         </p>
                     </div>
 
